--- a/prog2 3/index.html
+++ b/prog2 3/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf8">
 </head>
 <body>
+  <script type="text/javascript" src="livingCreator.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 	<script type="text/javascript" src="class.js"></script>
